specs/blueprints/errors/validation/expected_value_got_attributes.eno
# Expecting a field with a value but getting a field with an attribute

-- input
field:
attribute = value
-- input

-- javascript
enolib.parse(input).field('field');
-- javascript

-- php
Enolib\Parser::parse($input)->field('field');
-- php

-- python
enolib.parse(input).field('field')
-- python

-- ruby
Enolib.parse(input).field('field')
-- ruby

## ValidationError

-- text
A field containing a value was expected.
-- text

-- snippet
   Line | Content
 >    1 | field:
 *    2 | attribute = value
-- snippet

selection: [0,0] => [1,13]


# Expecting a field containing a value but getting a field containing multiple attributes with empty lines

-- input
field:

attribute = value

attribute = value

attribute = value

-- input

-- javascript
enolib.parse(input).field('field');
-- javascript

-- php
Enolib\Parser::parse($input)->field('field');
-- php

-- python
enolib.parse(input).field('field')
-- python

-- ruby
Enolib.parse(input).field('field')
-- ruby

## ValidationError

-- text
A field containing a value was expected.
-- text

-- snippet
   Line | Content
 >    1 | fieldset:
 *    2 | 
 *    3 | attribute = value
 *    4 | 
 *    5 | attribute = value
 *    6 | 
 *    7 | attribute = value
      8 | 
-- snippet

selection: [0,0] => [6,13]

# Expecting a field containing a value but getting a field containing two attributes with comments

-- input
field:
> comment
attribute = value

> comment
attribute = value
-- input

-- javascript
enolib.parse(input).field('field');
-- javascript

-- php
Enolib\Parser::parse($input)->field('field');
-- php

-- python
enolib.parse(input).field('field')
-- python

-- ruby
Enolib.parse(input).field('field')
-- ruby

## ValidationError

-- text
A field containing a value was expected.
-- text

-- snippet
   Line | Content
 >    1 | field:
 *    2 | > comment
 *    3 | attribute = value
 *    4 | 
 *    5 | > comment
 *    6 | attribute = value
-- snippet

selection: [0,0] => [5,13]
